Main screen implemented: items are being dynamically rendered from data.js using renderItems() function

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
+
+
 <html>
     <head>
        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-	<script src="index.js"></script>
+        <main>
+            <div class="hero">
+                <div>
+                    <h2>Jimmy's Diner</h2>
+                    <p>The best burgers and pizzas in town</p>
+                </div>
+            </div>
+            <div class="main-order">
+                
+            </div>
+        </main>
+
+
+	<script src="index.js" type="module"></script>
     </body>
 </html>
